[package]
name = "color-code"
license = "MIT"
version = "0.1.0"
keywords = ["rgb", "color","colour"]
description = "A library to work with color"
authors = ["Nur <nurmohammed840@gmail.com>"]
repository = "https://github.com/nurmohammed840/color_code.rs"
edition = "2018"

[lib]
name = "Color"
path = "src/lib.rs"

[dependencies]
